--- a/packages/google_mobile_ads/android/src/main/res/layout/gnt_small_template_view.xml
+++ b/packages/google_mobile_ads/android/src/main/res/layout/gnt_small_template_view.xml
@@ -123,7 +123,7 @@
                 android:id="@+id/rating_bar"
                 android:background="@color/gnt_white"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:textSize="@dimen/gnt_text_size_small"
                 android:textColor="@color/gnt_gray"
                 android:numStars="5"
@@ -136,6 +136,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/ad_notification_view"
+                style="?android:attr/ratingBarStyleSmall"
                 app:layout_constraintTop_toTopOf="parent">
 
             </RatingBar>
